<resources>
    <string name="app_name">Your Diary</string>
    <string name="back_button">Back button</string>

<!--    LoginFragment.kt-->
    <string name="your_diary_is_locked">Your Diary is locked</string>
    <string name="biometrics_title">Biometric login for Your Diary</string>
    <string name="biometrics_subtitle">Log in using biometrics</string>

<!--    OverviewFragment.kt-->
    <string name="your_diary">Your Diary</string>
    <string name="add_entry">Add entry</string>

<!--    EntryFragment.kt-->
    <string name="title">Title</string>
    <string name="emotion">😐</string>
    <string name="content">Content</string>
    <string name="your_thoughts">Your thoughts…</string>
    <string name="created_placeholder">Created: %s</string>
    <string name="modified_placeholder">Modified: %s</string>

<!--    SettingsFragment.kt-->
    <string name="sync">Sync</string>
    <string name="open_sync_menu">Open sync menu</string>
    <string name="sync_desc">This menu allows you to synchronize your app data with a local Diary sync server.</string>
    <string name="host_address">Host address</string>
    <string name="host_empty">Host must not be empty; check server window</string>
    <string name="sync_connect">Connecting to server…</string>
    <string name="sync_up_started">Uploading entries to server…</string>
    <string name="sync_down_started">Downloading entries from server…</string>
    <string name="sync_up_success">Data successfully uploaded!</string>
    <string name="sync_down_success">Data successfully downloaded!</string>
    <string name="sync_error">Something went wrong.</string>
</resources>