<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync"
        android:fontFamily="@font/manrope_semibold"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sync_desc"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/host_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host_address"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <ImageButton
            android:id="@+id/sync_up_button"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/cloud_up"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/sync_down_button"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/cloud_down"
            android:scaleType="fitCenter"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorHint"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

</LinearLayout>