<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded_corner_layer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/reveal_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:background="?attr/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"/>

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/manrope_bold"
            android:textSize="32sp"
            android:hint="@string/title"
            android:textColor="?attr/colorOnBackground"
            android:background="@null"
            android:inputType="textCapSentences"
            android:layout_marginEnd="4dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emotion_field"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:hint="@string/emotion"
            android:textColor="?attr/colorOnBackground"
            android:background="@null"
            android:maxLength="8"/>

    </LinearLayout>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginHorizontal="4dp"-->
<!--        android:layout_marginVertical="8dp"-->
<!--        android:background="?attr/colorHint"/>-->

    <com.denizd.diary.view.RichEditText
        android:id="@+id/content_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:gravity="top|start"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@null"
        android:textColor="?attr/colorOnBackground"
        android:hint="@string/your_thoughts"
        android:isScrollContainer="true"
        android:inputType="textMultiLine|textCapSentences"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="?attr/colorHint"
            android:fontFamily="@font/manrope_medium"/>

        <TextView
            android:id="@+id/last_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="?attr/colorHint"
            android:fontFamily="@font/manrope_medium"/>

    </LinearLayout>

</LinearLayout>